# smartcam

./: CMakeLists.txt  Main.qml  images.qrc  liste_smart_cams.json  main.cpp  resources.qrc  smartcam.cpp  smartcam.h
resources/: liste_smart_cams.json
